--- a/views/error/404.html
+++ b/views/error/404.html
@@ -1,8 +1,8 @@
-<link rel="stylesheet" href="assets/css/error-page.css"/>
+<link rel="stylesheet" href="/static/css/error-page.css"/>
 
 <!-- 正文开始 -->
 <div class="error-page">
-    <img class="error-page-img" style="max-width: 300px;" src="assets/images/ic_404.svg">
+    <img class="error-page-img" style="max-width: 300px;" src="/static/img/ic_404.svg">
     <div class="error-page-info">
         <h1>404</h1>
         <div class="error-page-info-desc">啊哦，你访问的页面不存在(⋟﹏⋞)</div>
