--- a/views/index.html
+++ b/views/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>EasyWeb管理系统模板</title>
-    <link rel="icon" href="../static/images/favicon.ico"/>
-    <link rel="stylesheet" href="../static/libs/layui/css/layui.css"/>
+    <link rel="icon" href="../static/img/favicon.ico"/>
+    <link rel="stylesheet" href="../static/layui/css/layui.css"/>
     <link rel="stylesheet" href="../static/css/admin.css"/>
 </head>
 
@@ -16,7 +16,7 @@
     <!-- 头部 -->
     <div class="layui-header">
         <div class="layui-logo">
-            <img src="../static/images/logo.png"/>
+            <img src="../static/img/logo.png"/>
             <cite>&nbsp;EasyWeb Pro&emsp;</cite>
         </div>
         <ul class="layui-nav layui-layout-left">
@@ -39,7 +39,7 @@
             </li>
             <li class="layui-nav-item" lay-unselect>
                 <a style="display: inline;">
-                    <img src="../static/images/head.png" class="layui-nav-img">
+                    <img src="../static/img/head.png" class="layui-nav-img">
                     <cite id="huName"></cite>
                 </a>
                 <dl class="layui-nav-child">
@@ -102,7 +102,7 @@
 </div>
 
 <!-- js部分 -->
-<script type="text/javascript" src="../static/libs/layui/layui.js"></script>
+<script type="text/javascript" src="../static/layui/layui.js"></script>
 <script type="text/javascript" src="../static/js/main.js"></script>
 </body>
 
