--- a/views/user/add.html
+++ b/views/user/add.html
@@ -14,6 +14,14 @@
     </div>
 
     <div class="layui-form-item">
+        <label class="layui-form-label">公司名称</label>
+        <div class="layui-input-inline">
+            <input type="text" name="company_name" id="company_name" lay-verify="required" autocomplete="off" placeholder="公司名称" class="layui-input" value="">
+        </div>
+        <div class="layui-form-mid layui-word-aux">*</div>
+    </div>
+
+    <div class="layui-form-item">
         <label class="layui-form-label">真实姓名</label>
         <div class="layui-input-inline">
             <input type="text" name="real_name" id="real_name" lay-verify="required" autocomplete="off" placeholder="真实姓名" class="layui-input" value="">
