--- a/views/user/edit.html
+++ b/views/user/edit.html
@@ -3,23 +3,32 @@
     <div class="layui-form-item">
         <label class="layui-form-label">登录账号</label>
         <div class="layui-input-inline">
-            <input type="text" name="login_name" readonly id="login_name" lay-verify="required" autocomplete="off" placeholder="登录账号" class="layui-input" value="{{.admin.login_name}}">
+            <input type="text" name="login_name" readonly id="login_name" lay-verify="required" autocomplete="off" placeholder="登录账号" class="layui-input" value="{{.user.login_name}}">
         </div>
         <div class="layui-form-mid layui-word-aux">*登录不允许修改</div>
     </div>
 
     <div class="layui-form-item">
-        <label class="layui-form-label">真实姓名</label>
+        <label class="layui-form-label">公司名称</label>
         <div class="layui-input-inline">
-            <input type="text" name="real_name" id="real_name" lay-verify="required" autocomplete="off" placeholder="真实姓名" class="layui-input" value="{{.admin.real_name}}">
+            <input type="text" name="company_name" id="company_name" lay-verify="required" autocomplete="off" placeholder="公司名称" class="layui-input" value="{{.user.company_name}}">
         </div>
         <div class="layui-form-mid layui-word-aux">*</div>
     </div>
 
     <div class="layui-form-item">
+        <label class="layui-form-label">真实姓名</label>
+        <div class="layui-input-inline">
+            <input type="text" name="real_name" id="real_name" lay-verify="required" autocomplete="off" placeholder="真实姓名" class="layui-input" value="{{.user.real_name}}">
+        </div>
+        <div class="layui-form-mid layui-word-aux">*</div>
+    </div>
+
+
+    <div class="layui-form-item">
         <label class="layui-form-label">手机号码</label>
         <div class="layui-input-inline">
-            <input type="text" name="phone" lay-verify="phone|required" autocomplete="off" placeholder="手机号码" class="layui-input" value="{{.admin.phone}}">
+            <input type="text" name="phone" lay-verify="phone|required" autocomplete="off" placeholder="手机号码" class="layui-input" value="{{.user.phone}}">
         </div>
         <div class="layui-form-mid layui-word-aux">*</div>
     </div>
@@ -27,7 +36,7 @@
     <div class="layui-form-item">
         <label class="layui-form-label">电子邮箱</label>
         <div class="layui-input-inline">
-            <input type="text" name="email" id="email" lay-verify="email" autocomplete="off" placeholder="电子邮箱" class="layui-input" value="{{.admin.email}}">
+            <input type="text" name="email" id="email" lay-verify="email" autocomplete="off" placeholder="电子邮箱" class="layui-input" value="{{.user.email}}">
         </div>
         <div class="layui-form-mid layui-word-aux">*</div>
     </div>
@@ -53,8 +62,8 @@
 
 
     
-    <input type="hidden" id="roleids" name="roleids" value="{{.admin.role_ids}}">
-    <input type="hidden" id="id" name="id" value="{{.admin.id}}">
+    <input type="hidden" id="roleids" name="roleids" value="{{.user.role_ids}}">
+    <input type="hidden" id="id" name="id" value="{{.user.id}}">
     
     <div class="layui-form-item">
         <div class="layui-input-block">
@@ -71,7 +80,7 @@ var $;
     }).use(['form','element','layer','jquery'],function(){
         var form = layui.form; //只有执行了这一步，部分表单元素才会自动修饰成功
         var $ = layui.jquery;
-        var role_ids_str = "{{.admin.role_ids}}"
+        var role_ids_str = "{{.user.role_ids}}"
         var role_ids = role_ids_str.split(",");
 
         form.on('checkbox(role_ids)', function(data){
@@ -93,7 +102,7 @@ var $;
             $.post('{{urlfor "UserController.AjaxSave"}}', form_data, function (out) {
                 if (out.status == 0) {
                     layer.msg("操作成功",{icon: 1},function () {
-                        window.location.reload()
+                        window.location.href='{{urlfor "UserController.List"}}'
                     })
                 } else {
                     layer.msg(out.message)
