--- a/views/user/modify.html
+++ b/views/user/modify.html
@@ -4,15 +4,23 @@
         <div class="layui-form-item">
             <label class="layui-form-label">登录账号</label>
             <div class="layui-input-inline">
-                <input type="text" name="login_name" readonly id="login_name" lay-verify="required" autocomplete="off" placeholder="登录账号" class="layui-input" value="{{.admin.login_name}}">
+                <input type="text" name="login_name" readonly id="login_name" lay-verify="required" autocomplete="off" placeholder="登录账号" class="layui-input" value="{{.user.login_name}}">
             </div>
             <div class="layui-form-mid layui-word-aux">*登录不允许修改</div>
         </div>
 
         <div class="layui-form-item">
+            <label class="layui-form-label">公司名称</label>
+            <div class="layui-input-inline">
+                <input type="text" name="company_name" id="company_name" lay-verify="required" autocomplete="off" placeholder="公司名称" class="layui-input" value="{{.user.company_name}}">
+            </div>
+            <div class="layui-form-mid layui-word-aux">*</div>
+        </div>
+
+        <div class="layui-form-item">
             <label class="layui-form-label">真实姓名</label>
             <div class="layui-input-inline">
-                <input type="text" name="real_name" id="real_name" lay-verify="required" autocomplete="off" placeholder="真实姓名" class="layui-input" value="{{.admin.real_name}}">
+                <input type="text" name="real_name" id="real_name" lay-verify="required" autocomplete="off" placeholder="真实姓名" class="layui-input" value="{{.user.real_name}}">
             </div>
             <div class="layui-form-mid layui-word-aux">*</div>
         </div>
@@ -20,7 +28,7 @@
         <div class="layui-form-item">
             <label class="layui-form-label">手机号码</label>
             <div class="layui-input-inline">
-                <input type="text" name="phone" lay-verify="phone|required" autocomplete="off" placeholder="手机号码" class="layui-input" value="{{.admin.phone}}">
+                <input type="text" name="phone" lay-verify="phone|required" autocomplete="off" placeholder="手机号码" class="layui-input" value="{{.user.phone}}">
             </div>
             <div class="layui-form-mid layui-word-aux">*</div>
         </div>
@@ -28,7 +36,7 @@
         <div class="layui-form-item">
             <label class="layui-form-label">电子邮箱</label>
             <div class="layui-input-inline">
-                <input type="text" name="email" id="email" lay-verify="email" autocomplete="off" placeholder="电子邮箱" class="layui-input" value="{{.admin.email}}">
+                <input type="text" name="email" id="email" lay-verify="email" autocomplete="off" placeholder="电子邮箱" class="layui-input" value="{{.user.email}}">
             </div>
             <div class="layui-form-mid layui-word-aux">*</div>
         </div>
@@ -67,7 +75,7 @@
             <div class="layui-form-mid layui-word-aux"></div>
         </div>
 
-        <input type="hidden" id="id" name="id" value="{{.admin.id}}">
+        <input type="hidden" id="id" name="id" value="{{.user.id}}">
 
         <div class="layui-form-item">
             <div class="layui-input-block">
