工时项目管理EXCEL导出

--- a/views/manhour/add.html
+++ b/views/manhour/add.html
@@ -24,7 +24,7 @@
         <div class="layui-inline layui-col-md4">
             <label class="layui-form-label">本日用时</label>
             <div class="layui-input-inline">
-                <input type="text" name="man_hour" id="man_hour" lay-verify="required"  autocomplete="off" value="{{.manHour.ManHour}}" placeholder="小时" class="layui-input" value="">
+                <input type="text" name="man_hour" id="man_hour" lay-verify="required|number"  autocomplete="off" value="{{.manHour.ManHour}}" placeholder="小时" class="layui-input" value="">
             </div>
         </div>
         <div class="layui-inline layui-col-md8">
