工时项目管理EXCEL导出

--- a/static/css/login.css
+++ b/static/css/login.css
@@ -6,7 +6,7 @@
 */
 
 .bg-img{
-    background: url(/static/img/login-bg.jpg) fixed center center;
+    background: url(/static/img/bg_login2.svg) fixed center center;
 }
 
 body {
