--- a/views/layout/main.html
+++ b/views/layout/main.html
@@ -61,7 +61,7 @@
 
     <div class="layui-footer" style="font-size: 12px;text-align:center;">
         <!-- 底部固定区域 -->
-        2017 &copy; PPGO_ApiAdmin  Power by Beego
+        2017 &copy; sinochem Power by Beego
     </div>
 </div>
 
