--- a/views/project/list_user.html
+++ b/views/project/list_user.html
@@ -20,7 +20,11 @@
         //方法级渲染
         var insl= table.render({
             elem: '#table_list'
-            ,url: '/projectuser/tableuser?isExists={{.isExists}}'
+            ,url: '/projectuser/tableuser'
+            ,where: {
+                projectId:'{{.projectId}}',
+                isExists:'{{.isExists}}',
+            }
             ,cols: [[
                 {checkbox: true, fixed: true},
                 {field:'id', title: 'ID', align:'center',sort: true, width:80}
