--- a/views/manhour/list.html
+++ b/views/manhour/list.html
@@ -65,7 +65,7 @@
                 dateRange:$("#dateRange").val(),
             }
             ,cols: [[
-                {field:'id', title: 'ID', align:'center',sort: true, width:60}
+                {field:'id', title: 'ID', align:'center',sort: true, width:60,style:"display:none"}
                 ,{field:'project_name',title: '项目名称',sort: true,  width:180}
                 ,{field:'real_name', title: '姓名',sort: true, width:120}
                 ,{field:'work_date', title: '日期',sort: true, width:120}
